# zed-extension-opentofu

./: Cargo.toml  README.md  extension.toml
languages/opentofu/: config.toml
src/: opentofu.rs
